# driver-behavior-score

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0f1d7b7e8c21_add_source_ip_and_source_port_to_.py  10a510ec7a93_add_max_min_and_avg_speed_columns_in_.py  1b8e882789a5_widen_telematics_string_columns.py  3064b7ba41e3_fix_updated_at_challan.py  388e93fc9a83_first_migration.py  393a24f01d66_add_checksum_matched_col_in_telematics_.py  45d913d335f5_widen_vehicle_permit_type_length.py  517b2a3ee0a5_widen_telematics_string_columns.py  5904ef2cea33_increase_challan_number_length_in_.py  681933dd6f3c_add_nullable_expires_at_column_in_api_.py  6e475b9b4bc7_add_telemetry_fields_columns_in_.py  7b2506f3fcc3_add_telematics_event_table_only_raw_.py  859369050313_add_response_duration_ms_column_in_.py  8fe7c82c9380_add_source_ip_and_port_columns_in_.py  8ffb3a000877_widen_telematics_events_columns.py  9047316bc8b4_add_telematics_devices_table.py  963b5e5ffb08_use_imei_in_telematics_trip_cursor.py  9da2f579782c_add_day_night_stats_columns.py  9fba80dc2a79_increase_string_length_in_vehicle_table_.py  c0ad646021fb_add_apikey_model.py  (+4 more)
src/: config.py  database.py  dependencies.py  logging_utils.py  main.py  models.py  utils.py
telematics/: Dockerfile  backfill_parsed_fields.py  constants.py  database.py  listener.py  logging_utils.py  main.py  requirements.txt  service.py  test.py  utils.py
workers/: Dockerfile  main.py  requirements.txt  types.py  utils.py
(+59 files in other folders)
