[project]
name = "driver-behavior-score"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt>=4.2.0",
    "fastapi>=0.115.0",
    "gunicorn>=25.3.0",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "openai>=2.32.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.0",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "uvicorn>=0.42.0",
]
